# File_Processing

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: MinIO_client.py  Scaner.py  main.py
